[package]
name = "xcgit"
version = "0.1.0"
authors = ["nlimpid"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
git2 = "0.13.17"
log = "0.4.14"

[dependencies.clap]
version = "~2.27.0"
default-features = false

# Cherry-pick the features you'd like to use
features = [ "suggestions", "color" ]