[package]
authors = ["nlimpid"]
edition = "2021"
name = "xcgit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = {version = "0.3.14"}
git2 = "0.13.17"
hyper = "0.14.4"
indicatif = "0.15.0"
log = "0.4.14"
lust = "0.1.1"
reqwest = {version = "0.11", features = ["blocking", "json", "stream"]}
rust-crypto = "^0.2"
tokio = {version = "1.15.0", features = ["full"]}

[dependencies.clap]
default-features = false
version = "~2.27.0"

# Cherry-pick the features you'd like to use
features = ["suggestions", "color"]
